[package]
name = "iojcorefer"
version = "0.1.0"
authors = ["Earvin <earvin@earvinkayonga.com>"]


[dependencies]
actix-web       = "^0.7"
actix           = "^0.7"

futures         = "^0.1"

bytes           = "0.4"
json            = "^0.11"
serde           = "^1.0"
serde_json      = "^1.0"
serde_derive    = "^1.0"

redis           = "^0.8"
r2d2            = "^0.8"
r2d2_redis      = "^0.7"

failure         = "^0.1"

log             = "^0.4"
env_logger      = "^0.5"
clap            = "^2.31"


chrono          = "^0.4"
rand            = "^0.4"
byteorder       = "^1.2"

num_cpus        = "^1.0"
rusty_ulid      = "^0.4"

